objects/project_cloud__Stakeholder_Activity__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__IsGroup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsGroup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Parent_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to allow grouping of activities</description>
        <label>Group</label>
        <referenceTo>project_cloud__Stakeholder_Activity__c</referenceTo>
        <relationshipLabel>Stakeholder Activities</relationshipLabel>
        <relationshipName>Stakeholder_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Stakeholder Activities</relationshipLabel>
        <relationshipName>Stakeholder_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Stakeholder Activity</label>
    <nameField>
        <label>Stakeholder Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stakeholder Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>